--- a/app.json
+++ b/app.json
@@ -6,21 +6,23 @@
     "env": {
         "GATEWAY_MERCHANT_ID": {
             "required": true,
-            "description": "Your TEST Gateway merchant ID (must begin with 'TEST')"
+            "description": "Your TEST Gateway merchant ID (must begin with 'TEST')",
+            "value": "testmerch_a_25p"
         },
         "GATEWAY_API_PASSWORD": {
             "required": true,
-            "description": "Your TEST Gateway API password"
+            "description": "Your TEST Gateway API password",
+            "value": "458ca2e221d6ac8009e780fee723dfb3"
         },
         "GATEWAY_REGION": {
             "required": true,
             "description": "The Gateway region to target (options: ASIA_PACIFIC, EUROPE, NORTH_AMERICA, INDIA, CHINA, MTF)",
-            "value": "MTF"
+            "value": "ASIA_PACIFIC"
         },
         "GATEWAY_API_VERSION": {
             "required": true,
             "description": "The Gateway API version to target",
-            "value": "53"
+            "value": "61"
         }
     },
     "buildpacks": [
